--- a/invitroTKstats/vignettes/FupRED_vignette.Rmd
+++ b/invitroTKstats/vignettes/FupRED_vignette.Rmd
@@ -180,8 +180,16 @@ req_cols %>%
 By default, a TSV file containing the Level 1 data is exported to the user's directory. We have omitted this export with `output.res = FALSE`. The option to omit exporting a TSV file is also available at Levels 2 and 3 and will be used from this point forward. 
 
 ```{r L1 processing}
+# Rename EC1 as EQ1 AND EC2 as EQ2 so they do not get removed 
+fup_red_L0_curated <- fup_red_L0 %>% 
+  mutate(Sample.Type = case_when(
+    Sample.Type == "EC1" ~ "EQ1", 
+    Sample.Type == "EC2" ~ "EQ2",
+    TRUE ~ Sample.Type 
+  )) 
+
 fup_red_L1_curated <- format_fup_red(FILENAME = "Fup_RED_vignette",
-                                     data.in = fup_red_L0, 
+                                     data.in = fup_red_L0_curated, 
                                      # columns present in L0 data 
                                      sample.col = "Sample",
                                      compound.col = "Compound", 
@@ -201,9 +209,7 @@ fup_red_L1_curated <- format_fup_red(FILENAME = "Fup_RED_vignette",
                                      analysis.parameters = "RT",
                                      # don't export output TSV file 
                                      output.res = FALSE,
-                                     save.bad.types = TRUE
                                      )
-                                 
 ```
 
 We receive a warning message that some of our samples have been removed due to "inappropriate sample types". The removed samples include data that did not have one of the following sample types 
@@ -214,20 +220,166 @@ We receive a warning message that some of our samples have been removed due to "
 3. Phosphate-buffered well concentration (PBS)
 4. Time zero plasma concentration (T0)
 5. Plasma stability sample (Stability)
-6. Equilibrium Control Well 1 (EQ1)
-7. Equilibrium Control Well 2 (EQ2)
+6. Equilibrium Control Well 1 (EC1)
+7. Equilibrium Control Well 2 (EC2)
 8. Calibration Curve (CC)
 
-The following table displays some of the samples that were removed. 
+The following table displays some of the samples that were removed. These samples are annotated with a "QC" sample type indicating "Quality Control" and should therefore not be included in our analysis.  
 
-```{r}
-fup_red_L0 %>% 
-  filter(!Sample.Type %in% c("Plasma", "PBS", "T0", "Plasma.Blank", "NoPlasma.Blank","CC", "Stability", "EQ1", "EQ2"))
-
-fup_red_L1 %>% 
-  distinct(Sample.Type)
+```{r, echo = FALSE}
+fup_red_L0_curated %>% 
+  filter(!Sample.Type %in% c("Plasma", "PBS", "T0", "Plasma.Blank", "NoPlasma.Blank","CC", "Stability", "EQ1", "EQ2")) %>% 
+  head(n = 5) %>% 
+  flextable() %>% 
+  bg(bg = "#DDDDDD", part = "header") %>%
+  autofit() %>%
+  set_table_properties(
+    opts_html = list(
+      scroll = list(
+        height = 200
+      )
+    )
+  ) %>% 
+  set_caption(caption = "Table 3: Subset of removed samples",
+              align_with_table = FALSE) %>% 
+  fontsize(size = 10, part = "all") %>% 
+  theme_vanilla()
 ```
 
+Users can verify that these samples are excluded by filtering their Level 1 data frame and ensuring no matches are found. One approach is given below. 
+
+```{r, eval = FALSE}
+# All the samples of an inappropriate sample type 
+excluded <- fup_red_L0_curated %>% 
+  filter(!Sample.Type %in% c("Plasma", "PBS", "T0", "Plasma.Blank", "NoPlasma.Blank","CC", "Stability", "EQ1", "EQ2"))
+
+# Exclude based on Sample and DTXSID 
+X <- c(excluded$Sample)
+names(X) <- paste(excluded$Sample, excluded$DTXSID, sep = "+")
+Y <- c(excluded$DTXSID)
+
+# Find samples in L1 data frame with matching sample name (X) and DTXSID (Y) 
+matches <- as.data.frame(t(mapply(function(X,Y)
+  {subset(fup_red_L1_curated, Lab.Sample.Name == X & DTXSID == Y)},
+  X, Y, USE.NAMES = T)))
+
+matches
+
+# Check that no matches were returned for each sample in `excluded`
+check <- rep(1, nrow(matches))
+names(check) <- rownames(matches)
+for (name in rownames(matches)){
+  # If no matches were found, each element of check should evaluate to 0
+  check[name] <- sum(sapply(c(1:ncol(matches)),
+                            function(X){length(matches[1,X][[1]])}))
+}
+
+# Verify that each sample in `excluded` had no matches 
+check
+
+# If no matches, should evaluate to 0
+sum(check)
+```
+
+To export the removed samples as a TSV, the user can set the parameter `save.bad.types = TRUE`. For this example, we will not save the discarded sample types. 
+
+The following table displays the first three rows of `fup_red_L1_curated`, our Level 1 data produced from `format_fup_red`. In addition to the columns specified by the user, there is an additional column called `Response`. This column is the test compound concentration and is calculated as $\textrm{Response} = \frac{\textrm{Analyte Area    }}{\textrm{ISTD Area}} *\textrm{ISTD Conc}$ where $\textrm{Analyte Area}$ is defined by the `Area` column, $\textrm{ISTD Area}$ is defined by the `ISTD.Area` column, and $\textrm{ISTD Conc}$ is defined by the `ISTD.Conc` column. 
+
+```{r, echo = FALSE}
+fup_red_L1_curated %>% 
+  head(n = 3) %>% 
+  flextable() %>% 
+  bg(bg = "#DDDDDD", part = "header") %>% 
+  autofit() %>% 
+  set_table_properties(
+    opts_html = list(
+      scroll = list(
+      )
+    )
+  ) %>% 
+  set_caption(caption = "Table 4: Level 1 data", 
+              align_with_table = FALSE) %>% 
+  fontsize(size = 10, part = "all") %>% 
+  theme_vanilla()
+```
+
+## Level 2 processing 
+
+`sample_verification` is the Level 2 function used to add a verification column. The verification column indicates whether a sample should be included in the point estimation (Level 3) and credible interval (Level 4) processing. This column allows users to keep all samples in their data but only utilize the reliable samples for f~up~ estimation. All of the data in Level 2 is identical to the data in Level 1 with the exception of the additional `Verified` column. 
+
+To determine whether a sample should be included, the user should consult the wet-lab scientists from where their data originates. This level of processing allows the user to receive feedback from the wet-lab scientists, exclude erroneous or unreliable samples, and produce new f~up~ estimates. There is an open channel of communication between the user and the wet-lab scientists. 
+
+We will use the already processed Level 2 data frame, `fup_red_L2`, to regenerate our exclusion data. Note, all of our samples are verified but we are explaining how to create an exclusion list for learning purposes. In general, the user would not have access to the exclusion information *a priori*. 
+
+The exclusion data frame must include the following columns: `Variables`, `Values`, and `Message`. The `Variables` column contains the variable names used to filter the excluded rows. Here, we are using `Lab.Sample.Name` and`DTXSID` to identify the excluded rows separated by a "|". The `Values` column contains the values of the variables, as a character, also separated by a "|". The `Message` column contains the reason for exclusion. Here, we are using the reasons listed in the `Verified` column in `fup_red_L2`. The user should refrain from using "|" in any of their descriptions to avoid conflicts with the `sample_verification` function. 
+
+```{r L2 processing exclusion}
+# Use verification data from loaded in `fup_red_L2` data frame 
+exclusion <- fup_red_L2 %>% 
+  filter(Verified != "Y") %>% 
+  mutate("Variables" = "Lab.Sample.Name|DTXSID") %>% 
+  mutate("Values" = paste(Lab.Sample.Name, DTXSID, sep = "|")) %>% 
+  mutate("Message" = Verified) %>% 
+  select(Variables, Values, Message)
+```
+
+```{r, echo = FALSE}
+exclusion %>% 
+  flextable() %>% 
+  bg(bg = "#DDDDDD", part = "header") %>% 
+  autofit() %>% 
+  set_table_properties(
+    opts_html = list(
+      scroll = list(
+        height = 200
+      )
+      )
+  ) %>% 
+  set_caption(caption = "Table 5: Exclusion data frame",
+              align_with_table = FALSE) %>% 
+  fontsize(size = 10, part = "all") %>% 
+  theme_vanilla()
+```
+
+As expected, our exclusion data frame is empty because all of our samples are verified. If all of the user's samples are verified, they simply do not provide an `exclusion.info` data frame in `sample_verification`. 
+
+```{r}
+fup_red_L2_curated <- sample_verification(FILENAME = "Fup_RED_vignette",
+                                          data.in = fup_red_L1_curated,
+                                          assay = "fup-RED",
+                                          # don't export output TSV file
+                                          output.res = FALSE)
+```
+
+Our Level 2 data now contains a 'Verified' column. If the sample should be included, the column contains a "Y" for yes. If the sample should be excluded, the column contains the reason for exclusion. 
+
+The following table displays some rows of the Level 2 data. 
+
+```{r}
+fup_red_L2_curated %>% 
+  head(n = 3) %>% 
+  flextable() %>% 
+  bg(bg = "#DDDDDD", part = "header") %>% 
+  autofit() %>% 
+  set_table_properties(
+    opts_html = list(
+      scroll = list()
+      )
+  ) %>% 
+  set_caption("Table 6: Level 2 data", align_with_table = FALSE) %>% 
+  fontsize(size = 10, part = "body") %>% 
+  theme_vanilla()
+```
+
+## Level 3 processing 
+
+`calc_fup_red` is the Level 3 function used to calculate the f~up~ RED point estimate for each test compound using a Frequentist framework. 
+
+Mathematically, f~up~ is the ratio of the buffer side response to the plasma side responses. To account for background noise and variation, we subtract the corresponding blank sample from the mean response. 
+
+PBS Response (Phosphate-buffered solution) - NPB Response (No.Plasma.Blank)
+-------------------------------------------------------------
+PL Response (Plasma) - B Response (Plasma.Blank)
 
 ## References 
 
